deploy: htw-imi-showtime/showtime-website@eea8341172fcd2d0b64880cbeda2e3cf3101234d

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 35b53ef 
+</p><p>AbbreviatedHash: eea8341 
 </p><p>AuthorDate: 2025-02-02 
-</p><p>AuthorEmail: Yudan.Pan@Student.HTW-Berlin.de 
-</p><p>AuthorName: YudanPan 
+</p><p>AuthorEmail: 147834099&#43;Tiphannie@users.noreply.github.com 
+</p><p>AuthorName: Tiphannie Margret 
 </p><p>CommitDate: 2025-02-02 
-</p><p>Hash: 35b53ef09f0e24906e3c44192772d62d2b05c223 
-</p><p>Subject: B4 - two images added/changed (#432) 
+</p><p>Hash: eea8341172fcd2d0b64880cbeda2e3cf3101234d 
+</p><p>Subject: Update homepage content (#434) 
 </p>
 
 
