--- a/schedule/index.html
+++ b/schedule/index.html
@@ -182,7 +182,7 @@ a project fair in the afternoon.</p>
             <li>
                 <p>10:12</p>
                 <div class="bachelor">
-                    <h3 class="no-underscore">B2 - VoiSum: Use AI to summarize voice messages</h3>
+                    <h3 class="no-underscore">B2 - VoiSum: Use AI to transcribe / summarize voice messages</h3>
                      Prof. Tobias Lenz
                     
                     <a href="https://htw-imi-showtime.github.io/staging/ws24/bachelor/b2-voisum/">-> Project_Details</a>
