--- a/ws24/bachelor/b2-voisum/index.html
+++ b/ws24/bachelor/b2-voisum/index.html
@@ -654,7 +654,7 @@ B2
             <h1>
                 <span class="type">B2 Bachelor</span>
                 VoiSum
-             <span class="subtitle bachelor">Use AI to summarize voice messages</span>
+             <span class="subtitle bachelor">Use AI to transcribe / summarize voice messages</span>
              <span class="underscore-spacer"></span>
             </h1>
             <section style="text-align: right;">
@@ -751,10 +751,9 @@ B2
     </h3>
     <div class="spacer"></div>
     <div class="content">
-        <p>So, lets break down what our software can actually do? First up, we&rsquo;ve got this cool transcribe-and-summarize combo - just hit the endpoint and boom! You get both a full transcript of your audio AND a neat summary. No more dealing with them separately!</p>
-<p>Want just the highlights? Our keywords feature has your back, pulling just the bullet points out of your message. And for those times when you need specific control, we built this sweet custom-length summary feature - you decide how long or short you want it.</p>
-<p>Testing it out is super easy too! Record something (like that random story your friend told you), and watch our API work its magic. Or if you&rsquo;ve already got some audio files collecting dust on your device, just upload them and let our features do their thing!
-It&rsquo;s basically like having a personal assistant who&rsquo;s really good at cutting through the fluff - except it&rsquo;s all AI-powered and way cooler!</p>
+        <p>So, let&rsquo;s break down what our software can actually do. First up, our software provides an integrated transcription-and-summarization service via a single endpoint, delivering both a full transcript of your audio and a concise summary. This all-in-one approach streamlines the process, eliminating the need to handle transcription and summarization separately. However &ldquo;transcribe&rdquo; and &ldquo;summarize&rdquo; can still be called separately, if need be.</p>
+<p>For a more focused overview, the keywords feature extracts and highlights the key points of your content. When a specific level of detail is required, the custom-length summary option lets you determine the length of the summary.</p>
+<p>Getting started is straightforward: simply record a new audio clip or upload an existing file, then let our API handle the rest. Think of it as an AI-driven personal assistant that efficiently condenses your audio content—minus the hassle of manual editing.</p>
 
     </div>
 </section>
@@ -767,10 +766,8 @@ It&rsquo;s basically like having a personal assistant who&rsquo;s really good at
     </h3>
     <div class="spacer"></div>
     <div class="content">
-        <p>Our journey kicked off when Prof. Tobias Lenz dropped this awesome idea in our laps - talk about starting with a bang! First things first, we got organized with a GitHub repo and set up a Kanban board to keep our workflow smooth (because who doesn&rsquo;t love checking off those task boxes, right?).
-Before diving in headfirst, we went full detective mode on existing AI models - to make sure we weren&rsquo;t reinventing the wheel. Once we had the lay of the land, we sketched out our game plan and started refining it. The tech stack hunt was real - we had to find the perfect combo that would make our project work.</p>
-<p>We kept things agile and flexible with weekly catchups (complete with endless coffee runs). It was all about that &ldquo;build, test, improve&rdquo; life - tweaking and fine-tuning until we had something that wasn&rsquo;t just functional, but actually made sense to use. No one likes a clunky app, after all!
-This approach meant we could pivot faster than a TikTok trend whenever we got feedback, keeping our project fresh and on point.</p>
+        <p>Our project began when Professor Tobias Lenz introduced the initial concept, prompting us to establish a GitHub repository and organize our tasks using a Kanban board for effective workflow management. We conducted an extensive review of existing AI models to ensure we were not duplicating efforts. After gaining insight into the landscape, we formulated our project plan and selected a technology stack optimized for our goals.</p>
+<p>Adhering to an agile methodology, we held regular weekly meetings to review progress, test new iterations, and refine our solution. This iterative approach allowed us to rapidly incorporate feedback and make adjustments as necessary, ensuring the final product was both robust and user-friendly.</p>
 
     </div>
 </section>
@@ -811,6 +808,10 @@ This approach meant we could pivot faster than a TikTok trend whenever we got fe
 <figure class="team-member">
     <img src="/staging/ws24/bachelor/b2-voisum/p-akrem.jpeg" alt="Portrait of Akrem Cheniour">
     <figcaption>Akrem Cheniour</figcaption>
+</figure>
+<figure class="team-member">
+    <img src="/staging/ws24/bachelor/b2-voisum/p-yusuf.jpeg" alt="Portrait of Yusuf Ünlen">
+    <figcaption>Yusuf Ünlen</figcaption>
 </figure>
 
 </section>
