--- a/ws24/project_overview/index.html
+++ b/ws24/project_overview/index.html
@@ -113,7 +113,7 @@
 
     <div >
         <a href="/staging/ws24/bachelor/b2-voisum/">B2 VoiSum</a>
-         - <small>Use AI to summarize voice messages
+         - <small>Use AI to transcribe / summarize voice messages
          </small><a href="#B2_meta_list">&darr;</a>
     </div>
 
@@ -312,7 +312,7 @@ project_id = "B1"
     <h4> Bachelor </h4>
         <p><b>project_id:</b> B2</p>
         <p><b>title:</b> = VoiSum</p>
-        <p><b>subtitle:</b> = Use AI to summarize voice messages</p>
+        <p><b>subtitle:</b> = Use AI to transcribe / summarize voice messages</p>
         <p><b>team:</b> [Jasmin Furche Tiphannie Byakuleka Veronika Zhaboklitskaya Akrem Cheniour Jannis Elsner Jenny Phuong Anh Nguyen Yusuf Ünlen] (string)</p>
         <p><b>supervisor:</b> Prof. Tobias Lenz (string)</p>
       
@@ -362,7 +362,7 @@ project_id = "B1"
                 [[slot]]
 time = "10:00"
 project_id = "B2"
-# title = "B2 - VoiSum: Use AI to summarize voice messages"
+# title = "B2 - VoiSum: Use AI to transcribe / summarize voice messages"
 # projectDetail = "/staging/ws24/bachelor/b2-voisum/"
 # class = "bachelor"
 
@@ -770,7 +770,7 @@ project_id = "B1"
 [[slot]]
 time = "10:00"
 project_id = "B2"
-# title = "B2 - VoiSum: Use AI to summarize voice messages"
+# title = "B2 - VoiSum: Use AI to transcribe / summarize voice messages"
 # projectDetail = "/staging/ws24/bachelor/b2-voisum/"
 # class = "bachelor"
 
@@ -841,7 +841,7 @@ project_id = "M3"
 
 "B1": - "B1 - CHEF Body-challenging VR experience",
 
-"B2": - "B2 - VoiSum Use AI to summarize voice messages",
+"B2": - "B2 - VoiSum Use AI to transcribe / summarize voice messages",
 
 "B3": - "B3 - Helm sucht Kopf Recruiting for the Berlin Fire Department",
 
