--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 5d06f6f 
+</p><p>AbbreviatedHash: 9b595e9 
 </p><p>AuthorDate: 2025-02-02 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2025-02-02 
-</p><p>Hash: 5d06f6f530b1258d8c8e7c1aab43f5b334549419 
-</p><p>Subject: STW - general updates for 2nd Release Train  (#433) 
+</p><p>Hash: 9b595e935746884ab4d525a858371ebca4ad624b 
+</p><p>Subject: update project-archive 
 </p>
 
 
