deploy: htw-imi-showtime/showtime-website@b1b40780529488d80ef5f9884feb9f3a839c8242

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 1582796 
+</p><p>AbbreviatedHash: b1b4078 
 </p><p>AuthorDate: 2025-02-02 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2025-02-02 
-</p><p>Hash: 1582796e9dae6277af38694dfb8b646e293ea259 
-</p><p>Subject: archive update: ws23 M5 
+</p><p>Hash: b1b40780529488d80ef5f9884feb9f3a839c8242 
+</p><p>Subject: update project archive after amended commit message 
 </p>
 
 
