deploy: htw-imi-showtime/showtime-website@9aba33a692a35a6ecb6e0ae1cdf472a0f9cf28ce

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: b1b4078 
-</p><p>AuthorDate: 2025-02-02 
-</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
-</p><p>AuthorName: Barne Kleinen 
-</p><p>CommitDate: 2025-02-02 
-</p><p>Hash: b1b40780529488d80ef5f9884feb9f3a839c8242 
-</p><p>Subject: update project archive after amended commit message 
+</p><p>AbbreviatedHash: 9aba33a 
+</p><p>AuthorDate: 2025-03-13 
+</p><p>AuthorEmail: charlotte.john.04@gmx.de 
+</p><p>AuthorName: flashwing-04 
+</p><p>CommitDate: 2025-03-13 
+</p><p>Hash: 9aba33a692a35a6ecb6e0ae1cdf472a0f9cf28ce 
+</p><p>Subject: Updated submodule to latest commit 
 </p>
 
 
