deploy: htw-imi-showtime/showtime-website@0c8102177bdbaac4265ff63b28afa2c9489ffb0b

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 9aba33a 
-</p><p>AuthorDate: 2025-03-13 
-</p><p>AuthorEmail: charlotte.john.04@gmx.de 
-</p><p>AuthorName: flashwing-04 
-</p><p>CommitDate: 2025-03-13 
-</p><p>Hash: 9aba33a692a35a6ecb6e0ae1cdf472a0f9cf28ce 
-</p><p>Subject: Updated submodule to latest commit 
+</p><p>AbbreviatedHash: 0c81021 
+</p><p>AuthorDate: 2025-04-15 
+</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
+</p><p>AuthorName: Barne Kleinen 
+</p><p>CommitDate: 2025-04-15 
+</p><p>Hash: 0c8102177bdbaac4265ff63b28afa2c9489ffb0b 
+</p><p>Subject: tiny project debug improvements (#435) 
 </p>
 
 
