deploy: htw-imi-showtime/showtime-website@b9ec240c36912c00b7caa857a7514ad43e70d789

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 1678716 
+</p><p>AbbreviatedHash: b9ec240 
 </p><p>AuthorDate: 2025-04-15 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2025-04-15 
-</p><p>Hash: 1678716d9bf61db73fb9dabf7565f2d4c4a92168 
-</p><p>Subject: STW: switch displayed semester, save the date 
+</p><p>Hash: b9ec240c36912c00b7caa857a7514ad43e70d789 
+</p><p>Subject: 25/7/2025 
 </p>
 
 
