deploy: htw-imi-showtime/showtime-website@1b45ef930344eefcc724a692e70c82095dacae52

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: b9ec240 
-</p><p>AuthorDate: 2025-04-15 
-</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
-</p><p>AuthorName: Barne Kleinen 
-</p><p>CommitDate: 2025-04-15 
-</p><p>Hash: b9ec240c36912c00b7caa857a7514ad43e70d789 
-</p><p>Subject: 25/7/2025 
+</p><p>AbbreviatedHash: 1b45ef9 
+</p><p>AuthorDate: 2025-06-19 
+</p><p>AuthorEmail: 147180494&#43;flashwing-04@users.noreply.github.com 
+</p><p>AuthorName: Charlotte John 
+</p><p>CommitDate: 2025-06-19 
+</p><p>Hash: 1b45ef930344eefcc724a692e70c82095dacae52 
+</p><p>Subject: ST: Change projects page to differentiate between published and upcoming … (#437) 
 </p>
 
 
