deploy: htw-imi-showtime/showtime-website@f28a81fcc9f520f081ddd4e1568094e0b04d740d

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 8dc4f04 
+</p><p>AbbreviatedHash: f28a81f 
 </p><p>AuthorDate: 2025-07-02 
-</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
-</p><p>AuthorName: Barne Kleinen 
+</p><p>AuthorEmail: charlotte.john.04@gmx.de 
+</p><p>AuthorName: flashwing-04 
 </p><p>CommitDate: 2025-07-02 
-</p><p>Hash: 8dc4f041e22102749062b136235360b2efc8a8e6 
-</p><p>Subject: readme 
+</p><p>Hash: f28a81fcc9f520f081ddd4e1568094e0b04d740d 
+</p><p>Subject: update README and fix documentation links 
 </p>
 
 
