deploy: htw-imi-showtime/showtime-website@15cfa91f214fc42077fbec096f46f06e756aa7c9

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,12 +69,12 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: f28a81f 
-</p><p>AuthorDate: 2025-07-02 
-</p><p>AuthorEmail: charlotte.john.04@gmx.de 
-</p><p>AuthorName: flashwing-04 
-</p><p>CommitDate: 2025-07-02 
-</p><p>Hash: f28a81fcc9f520f081ddd4e1568094e0b04d740d 
+</p><p>AbbreviatedHash: 15cfa91 
+</p><p>AuthorDate: 2025-07-03 
+</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
+</p><p>AuthorName: Barne Kleinen 
+</p><p>CommitDate: 2025-07-03 
+</p><p>Hash: 15cfa91f214fc42077fbec096f46f06e756aa7c9 
 </p><p>Subject: update README and fix documentation links 
 </p>
 
