--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 15cfa91 
+</p><p>AbbreviatedHash: 0a92d42 
 </p><p>AuthorDate: 2025-07-03 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2025-07-03 
-</p><p>Hash: 15cfa91f214fc42077fbec096f46f06e756aa7c9 
-</p><p>Subject: update README and fix documentation links 
+</p><p>Hash: 0a92d42f7cd26425811d5dd7e4ae5f5a26d82d2e 
+</p><p>Subject: remove details marker 
 </p>
 
 
