--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 0a92d42 
-</p><p>AuthorDate: 2025-07-03 
+</p><p>AbbreviatedHash: 716d4ee 
+</p><p>AuthorDate: 2025-07-10 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
-</p><p>CommitDate: 2025-07-03 
-</p><p>Hash: 0a92d42f7cd26425811d5dd7e4ae5f5a26d82d2e 
-</p><p>Subject: remove details marker 
+</p><p>CommitDate: 2025-07-10 
+</p><p>Hash: 716d4eec03bb6c3c51b715206d06a89a96efda84 
+</p><p>Subject: STW: update semester in script, fix link 
 </p>
 
 
