--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 716d4ee 
+</p><p>AbbreviatedHash: 804db96 
 </p><p>AuthorDate: 2025-07-10 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2025-07-10 
-</p><p>Hash: 716d4eec03bb6c3c51b715206d06a89a96efda84 
-</p><p>Subject: STW: update semester in script, fix link 
+</p><p>Hash: 804db96049a06374acf6036ac6788affb9feb7fb 
+</p><p>Subject: fix semester in du 
 </p>
 
 
