deploy: htw-imi-showtime/showtime-website@a4caeb7d1e862e0638603befc1e69d33b2efa29b

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 804db96 
+</p><p>AbbreviatedHash: a4caeb7 
 </p><p>AuthorDate: 2025-07-10 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2025-07-10 
-</p><p>Hash: 804db96049a06374acf6036ac6788affb9feb7fb 
-</p><p>Subject: fix semester in du 
+</p><p>Hash: a4caeb7d1e862e0638603befc1e69d33b2efa29b 
+</p><p>Subject: update brace-expansion 
 </p>
 
 
