deploy: htw-imi-showtime/showtime-website@37d210cae3404bd21dbf14846337fe15a7a3a8cd

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -46,7 +46,7 @@
              
              <li><a href="https://htw-imi-showtime.github.io/staging/contact">Contact</a></li>
     
-    <li><a href="/staging/">Browse Projects</a></li>
+    <li><a href="/staging/ss25/bachelor/b3-questlocator/">Browse Projects</a></li>
 
         </ul>
      </nav>
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: a4caeb7 
+</p><p>AbbreviatedHash: 37d210c 
 </p><p>AuthorDate: 2025-07-10 
-</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
-</p><p>AuthorName: Barne Kleinen 
+</p><p>AuthorEmail: friedrichludwig12@gmail.com 
+</p><p>AuthorName: friedrich-ludwig 
 </p><p>CommitDate: 2025-07-10 
-</p><p>Hash: a4caeb7d1e862e0638603befc1e69d33b2efa29b 
-</p><p>Subject: update brace-expansion 
+</p><p>Hash: 37d210cae3404bd21dbf14846337fe15a7a3a8cd 
+</p><p>Subject: B3 Quest Locator - First Release Train (#442) 
 </p>
 
 
