--- a/ss25/bachelor/index.html
+++ b/ss25/bachelor/index.html
@@ -72,7 +72,9 @@
     <div class="project-menu desktop-menu background bachelor">
         <ul>
             <li class="active">
-                <a href="/staging/ss25/bachelor/">The Project</a></li>
+                <a href="/staging/ss25/bachelor/">Overview</a></li>
+            
+            <li ><a href="/staging/ss25/bachelor/b3-questlocator/">Quest Locator</a></li>
                    
         </ul>
     </div>  
