--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 37d210c 
+</p><p>AbbreviatedHash: 93544a8 
 </p><p>AuthorDate: 2025-07-10 
-</p><p>AuthorEmail: friedrichludwig12@gmail.com 
-</p><p>AuthorName: friedrich-ludwig 
+</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
+</p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2025-07-10 
-</p><p>Hash: 37d210cae3404bd21dbf14846337fe15a7a3a8cd 
-</p><p>Subject: B3 Quest Locator - First Release Train (#442) 
+</p><p>Hash: 93544a85765f3c810b1b84e4244ffb0fbe6173eb 
+</p><p>Subject: increase du allowance for m2&#43;m3 
 </p>
 
 
