deploy: htw-imi-showtime/showtime-website@5f72aed46ad1480a5a6d5db7c94ef255c1626275

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 93544a8 
-</p><p>AuthorDate: 2025-07-10 
+</p><p>AbbreviatedHash: 5f72aed 
+</p><p>AuthorDate: 2025-07-12 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
-</p><p>CommitDate: 2025-07-10 
-</p><p>Hash: 93544a85765f3c810b1b84e4244ffb0fbe6173eb 
-</p><p>Subject: increase du allowance for m2&#43;m3 
+</p><p>CommitDate: 2025-07-12 
+</p><p>Hash: 5f72aed46ad1480a5a6d5db7c94ef255c1626275 
+</p><p>Subject: du shows kB 
 </p>
 
 
