deploy: htw-imi-showtime/showtime-website@6a71049a790797eee257f4855916e54fe375ad8c

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 5f72aed 
+</p><p>AbbreviatedHash: 6a71049 
 </p><p>AuthorDate: 2025-07-12 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2025-07-12 
-</p><p>Hash: 5f72aed46ad1480a5a6d5db7c94ef255c1626275 
-</p><p>Subject: du shows kB 
+</p><p>Hash: 6a71049a790797eee257f4855916e54fe375ad8c 
+</p><p>Subject: clean up actions 
 </p>
 
 
