--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 6a71049 
+</p><p>AbbreviatedHash: 389bc0e 
 </p><p>AuthorDate: 2025-07-12 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2025-07-12 
-</p><p>Hash: 6a71049a790797eee257f4855916e54fe375ad8c 
-</p><p>Subject: clean up actions 
+</p><p>Hash: 389bc0efccbbb7c0c600f1811a8cb9e8023ba17e 
+</p><p>Subject: update generic deploy 
 </p>
 
 
