deploy: htw-imi-showtime/showtime-website@8e91622248f5fae271b4b772f6cd42faddf0570b

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 389bc0e 
+</p><p>AbbreviatedHash: 8e91622 
 </p><p>AuthorDate: 2025-07-12 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2025-07-12 
-</p><p>Hash: 389bc0efccbbb7c0c600f1811a8cb9e8023ba17e 
-</p><p>Subject: update generic deploy 
+</p><p>Hash: 8e91622248f5fae271b4b772f6cd42faddf0570b 
+</p><p>Subject: move to workflow folder 
 </p>
 
 
