deploy: htw-imi-showtime/showtime-website@8965e5c8f182e24c7f28b2b4a1f0585981ae0240

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 8e91622 
+</p><p>AbbreviatedHash: 8965e5c 
 </p><p>AuthorDate: 2025-07-12 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2025-07-12 
-</p><p>Hash: 8e91622248f5fae271b4b772f6cd42faddf0570b 
-</p><p>Subject: move to workflow folder 
+</p><p>Hash: 8965e5c8f182e24c7f28b2b4a1f0585981ae0240 
+</p><p>Subject: amend wf 
 </p>
 
 
