deploy: htw-imi-showtime/showtime-website@6b1e6fe6324a0a18017644e2499aa5e60c2b7e81

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 8965e5c 
+</p><p>AbbreviatedHash: 6b1e6fe 
 </p><p>AuthorDate: 2025-07-12 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2025-07-12 
-</p><p>Hash: 8965e5c8f182e24c7f28b2b4a1f0585981ae0240 
-</p><p>Subject: amend wf 
+</p><p>Hash: 6b1e6fe6324a0a18017644e2499aa5e60c2b7e81 
+</p><p>Subject: update publish page via gh actions doc 
 </p>
 
 
