deploy: htw-imi-showtime/showtime-website@228c9967caf6951ba8c37b3eb699f92f99d0d3f8

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 6b1e6fe 
+</p><p>AbbreviatedHash: 228c996 
 </p><p>AuthorDate: 2025-07-12 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2025-07-12 
-</p><p>Hash: 6b1e6fe6324a0a18017644e2499aa5e60c2b7e81 
-</p><p>Subject: update publish page via gh actions doc 
+</p><p>Hash: 228c9967caf6951ba8c37b3eb699f92f99d0d3f8 
+</p><p>Subject: do not run on main in forks 
 </p>
 
 
