deploy: htw-imi-showtime/showtime-website@544659865babaabe3786b75874570b0bdd37ab93

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 228c996 
-</p><p>AuthorDate: 2025-07-12 
-</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
-</p><p>AuthorName: Barne Kleinen 
-</p><p>CommitDate: 2025-07-12 
-</p><p>Hash: 228c9967caf6951ba8c37b3eb699f92f99d0d3f8 
-</p><p>Subject: do not run on main in forks 
+</p><p>AbbreviatedHash: 5446598 
+</p><p>AuthorDate: 2025-07-13 
+</p><p>AuthorEmail: 147180494&#43;flashwing-04@users.noreply.github.com 
+</p><p>AuthorName: Charlotte John 
+</p><p>CommitDate: 2025-07-13 
+</p><p>Hash: 544659865babaabe3786b75874570b0bdd37ab93 
+</p><p>Subject: B5 - pages for 1st release train (#443) 
 </p>
 
 
