deploy: htw-imi-showtime/showtime-website@f1f06c528aba59af5db7cbd1b0b360f811ca8676

--- a/ss25/master/index.html
+++ b/ss25/master/index.html
@@ -72,7 +72,9 @@
     <div class="project-menu desktop-menu background master">
         <ul>
             <li class="active">
-                <a href="/staging/ss25/master/">The Project</a></li>
+                <a href="/staging/ss25/master/">Overview</a></li>
+            
+            <li ><a href="/staging/ss25/master/m2-m3-genesisetcivitas/">Genesis et Civitas</a></li>
                    
         </ul>
     </div>  
