--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 5446598 
+</p><p>AbbreviatedHash: f1f06c5 
 </p><p>AuthorDate: 2025-07-13 
-</p><p>AuthorEmail: 147180494&#43;flashwing-04@users.noreply.github.com 
-</p><p>AuthorName: Charlotte John 
+</p><p>AuthorEmail: 65015093&#43;LiloTM@users.noreply.github.com 
+</p><p>AuthorName: LiloTM 
 </p><p>CommitDate: 2025-07-13 
-</p><p>Hash: 544659865babaabe3786b75874570b0bdd37ab93 
-</p><p>Subject: B5 - pages for 1st release train (#443) 
+</p><p>Hash: f1f06c528aba59af5db7cbd1b0b360f811ca8676 
+</p><p>Subject: M2: M3_genesisetcivitas (#448) 
 </p>
 
 
