deploy: htw-imi-showtime/showtime-website@16970f438499b607890933bc5a081826ffc0ba1b

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -46,7 +46,7 @@
              
              <li><a href="https://htw-imi-showtime.github.io/staging/contact">Contact</a></li>
     
-    <li><a href="/staging/ss25/bachelor/b3-questlocator/">Browse Projects</a></li>
+    <li><a href="/staging/ss25/bachelor/b2-licht_und_schatten/">Browse Projects</a></li>
 
         </ul>
      </nav>
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: f1f06c5 
+</p><p>AbbreviatedHash: 16970f4 
 </p><p>AuthorDate: 2025-07-13 
-</p><p>AuthorEmail: 65015093&#43;LiloTM@users.noreply.github.com 
-</p><p>AuthorName: LiloTM 
+</p><p>AuthorEmail: 142119849&#43;P1exes@users.noreply.github.com 
+</p><p>AuthorName: P1exes 
 </p><p>CommitDate: 2025-07-13 
-</p><p>Hash: f1f06c528aba59af5db7cbd1b0b360f811ca8676 
-</p><p>Subject: M2: M3_genesisetcivitas (#448) 
+</p><p>Hash: 16970f438499b607890933bc5a081826ffc0ba1b 
+</p><p>Subject: B2 - filled out the body and added some placeholder images (#449) 
 </p>
 
 
