deploy: htw-imi-showtime/showtime-website@90e864ab61b9ac58e344a06bdc21fa663163d4f9

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 16970f4 
+</p><p>AbbreviatedHash: 90e864a 
 </p><p>AuthorDate: 2025-07-13 
-</p><p>AuthorEmail: 142119849&#43;P1exes@users.noreply.github.com 
-</p><p>AuthorName: P1exes 
+</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
+</p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2025-07-13 
-</p><p>Hash: 16970f438499b607890933bc5a081826ffc0ba1b 
-</p><p>Subject: B2 - filled out the body and added some placeholder images (#449) 
+</p><p>Hash: 90e864ab61b9ac58e344a06bdc21fa663163d4f9 
+</p><p>Subject: STW: Release Train1 Various Updates (#452) 
 </p>
 
 
