deploy: htw-imi-showtime/showtime-website@3c5346c888d20d6e8182041481cc384eb0db4e80

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 90e864a 
+</p><p>AbbreviatedHash: 3c5346c 
 </p><p>AuthorDate: 2025-07-13 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2025-07-13 
-</p><p>Hash: 90e864ab61b9ac58e344a06bdc21fa663163d4f9 
-</p><p>Subject: STW: Release Train1 Various Updates (#452) 
+</p><p>Hash: 3c5346c888d20d6e8182041481cc384eb0db4e80 
+</p><p>Subject: more space for m5 
 </p>
 
 
