--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 3c5346c 
+</p><p>AbbreviatedHash: f8338fb 
 </p><p>AuthorDate: 2025-07-13 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2025-07-13 
-</p><p>Hash: 3c5346c888d20d6e8182041481cc384eb0db4e80 
-</p><p>Subject: more space for m5 
+</p><p>Hash: f8338fb5b51f23b023e5777b10fd985b4e055156 
+</p><p>Subject: allow all files for m2_m3_split 
 </p>
 
 
