deploy: htw-imi-showtime/showtime-website@7076da9068d4ea80bee5ae2c0e243fdfad15813c

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: f8338fb 
+</p><p>AbbreviatedHash: 7076da9 
 </p><p>AuthorDate: 2025-07-13 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2025-07-13 
-</p><p>Hash: f8338fb5b51f23b023e5777b10fd985b4e055156 
-</p><p>Subject: allow all files for m2_m3_split 
+</p><p>Hash: 7076da9068d4ea80bee5ae2c0e243fdfad15813c 
+</p><p>Subject: dump gh context 
 </p>
 
 
