deploy: htw-imi-showtime/showtime-website@930da845123177d03c0914107082c275da767626

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 7076da9 
-</p><p>AuthorDate: 2025-07-13 
+</p><p>AbbreviatedHash: 930da84 
+</p><p>AuthorDate: 2025-07-14 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
-</p><p>CommitDate: 2025-07-13 
-</p><p>Hash: 7076da9068d4ea80bee5ae2c0e243fdfad15813c 
-</p><p>Subject: dump gh context 
+</p><p>CommitDate: 2025-07-14 
+</p><p>Hash: 930da845123177d03c0914107082c275da767626 
+</p><p>Subject: STW: add continue-on-error for dump environment step (#454) 
 </p>
 
 
