--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 930da84 
+</p><p>AbbreviatedHash: 3b6a298 
 </p><p>AuthorDate: 2025-07-14 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2025-07-14 
-</p><p>Hash: 930da845123177d03c0914107082c275da767626 
-</p><p>Subject: STW: add continue-on-error for dump environment step (#454) 
+</p><p>Hash: 3b6a298cd265bae963d5ae097d004502bcfc9e9a 
+</p><p>Subject: STW: make mediathek shortcode embeddable in sections, fixes #455 
 </p>
 
 
