deploy: htw-imi-showtime/showtime-website@81b8f04568dd428198856f7b621ecf62296533e8

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 3b6a298 
-</p><p>AuthorDate: 2025-07-14 
-</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
-</p><p>AuthorName: Barne Kleinen 
-</p><p>CommitDate: 2025-07-14 
-</p><p>Hash: 3b6a298cd265bae963d5ae097d004502bcfc9e9a 
-</p><p>Subject: STW: make mediathek shortcode embeddable in sections, fixes #455 
+</p><p>AbbreviatedHash: 81b8f04 
+</p><p>AuthorDate: 2025-07-15 
+</p><p>AuthorEmail: 104323196&#43;abductedRhino@users.noreply.github.com 
+</p><p>AuthorName: abductedRhino 
+</p><p>CommitDate: 2025-07-15 
+</p><p>Hash: 81b8f04568dd428198856f7b621ecf62296533e8 
+</p><p>Subject: B4 - Create urban bio space simulator page (#445) 
 </p>
 
 
