--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 81b8f04 
+</p><p>AbbreviatedHash: d8bb2cc 
 </p><p>AuthorDate: 2025-07-15 
-</p><p>AuthorEmail: 104323196&#43;abductedRhino@users.noreply.github.com 
-</p><p>AuthorName: abductedRhino 
+</p><p>AuthorEmail: 65311804&#43;julius-von-schultz@users.noreply.github.com 
+</p><p>AuthorName: Julius 
 </p><p>CommitDate: 2025-07-15 
-</p><p>Hash: 81b8f04568dd428198856f7b621ecf62296533e8 
-</p><p>Subject: B4 - Create urban bio space simulator page (#445) 
+</p><p>Hash: d8bb2cc8610e08a3602bfe7f33982bf795608fde 
+</p><p>Subject: M5 - Javacademy (#440) 
 </p>
 
 
