--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -46,7 +46,7 @@
              
              <li><a href="https://htw-imi-showtime.github.io/staging/contact">Contact</a></li>
     
-    <li><a href="/staging/ss25/bachelor/b2-licht_und_schatten/">Browse Projects</a></li>
+    <li><a href="/staging/ss25/bachelor/b1-der-kleine-weg-des-programmierens/">Browse Projects</a></li>
 
         </ul>
      </nav>
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: d8bb2cc 
+</p><p>AbbreviatedHash: 15b20f5 
 </p><p>AuthorDate: 2025-07-15 
-</p><p>AuthorEmail: 65311804&#43;julius-von-schultz@users.noreply.github.com 
-</p><p>AuthorName: Julius 
+</p><p>AuthorEmail: 149469185&#43;Elociraptor@users.noreply.github.com 
+</p><p>AuthorName: Elociraptor 
 </p><p>CommitDate: 2025-07-15 
-</p><p>Hash: d8bb2cc8610e08a3602bfe7f33982bf795608fde 
-</p><p>Subject: M5 - Javacademy (#440) 
+</p><p>Hash: 15b20f5cab64719feed144d94ba41f5d141ef547 
+</p><p>Subject: B1 draft for first release train (#444) 
 </p>
 
 
