deploy: htw-imi-showtime/showtime-website@9f5e9941f867ff491ba38d016ebfdf1d7c1fa94c

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 15b20f5 
+</p><p>AbbreviatedHash: 9f5e994 
 </p><p>AuthorDate: 2025-07-15 
-</p><p>AuthorEmail: 149469185&#43;Elociraptor@users.noreply.github.com 
-</p><p>AuthorName: Elociraptor 
+</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
+</p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2025-07-15 
-</p><p>Hash: 15b20f5cab64719feed144d94ba41f5d141ef547 
-</p><p>Subject: B1 draft for first release train (#444) 
+</p><p>Hash: 9f5e9941f867ff491ba38d016ebfdf1d7c1fa94c 
+</p><p>Subject: M2 M3 split (#453) 
 </p>
 
 
