--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 9f5e994 
+</p><p>AbbreviatedHash: e7db7dc 
 </p><p>AuthorDate: 2025-07-15 
-</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
-</p><p>AuthorName: Barne Kleinen 
+</p><p>AuthorEmail: 35660101&#43;sebastian-ptz@users.noreply.github.com 
+</p><p>AuthorName: Sebastian Ptz 
 </p><p>CommitDate: 2025-07-15 
-</p><p>Hash: 9f5e9941f867ff491ba38d016ebfdf1d7c1fa94c 
-</p><p>Subject: M2 M3 split (#453) 
+</p><p>Hash: e7db7dcc1539fa894edde6aabd6395f0184b0631 
+</p><p>Subject: M1 - First release train (#450) 
 </p>
 
 
