--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: e7db7dc 
+</p><p>AbbreviatedHash: eca9367 
 </p><p>AuthorDate: 2025-07-15 
-</p><p>AuthorEmail: 35660101&#43;sebastian-ptz@users.noreply.github.com 
-</p><p>AuthorName: Sebastian Ptz 
+</p><p>AuthorEmail: 95168446&#43;lauralgh@users.noreply.github.com 
+</p><p>AuthorName: lauralgh 
 </p><p>CommitDate: 2025-07-15 
-</p><p>Hash: e7db7dcc1539fa894edde6aabd6395f0184b0631 
-</p><p>Subject: M1 - First release train (#450) 
+</p><p>Hash: eca9367d5afc12f230f6bb0e3cd30acd5893424f 
+</p><p>Subject: M4 project page (#441) 
 </p>
 
 
