deploy: htw-imi-showtime/showtime-website@c8a7de9fbab921efc8da55e9977b41b43cd40bef

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: eca9367 
+</p><p>AbbreviatedHash: c8a7de9 
 </p><p>AuthorDate: 2025-07-15 
-</p><p>AuthorEmail: 95168446&#43;lauralgh@users.noreply.github.com 
-</p><p>AuthorName: lauralgh 
+</p><p>AuthorEmail: 104438758&#43;juliusSchultz@users.noreply.github.com 
+</p><p>AuthorName: Julius Schultz 
 </p><p>CommitDate: 2025-07-15 
-</p><p>Hash: eca9367d5afc12f230f6bb0e3cd30acd5893424f 
-</p><p>Subject: M4 project page (#441) 
+</p><p>Hash: c8a7de9fbab921efc8da55e9977b41b43cd40bef 
+</p><p>Subject: M5 Wizards of Java: Update Pages (#456) 
 </p>
 
 
