deploy: htw-imi-showtime/showtime-website@6616b121c67c30925bc63b71596072f44148972d

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -182,7 +182,7 @@ a project fair in the afternoon.</p>
             <li>
                 <p>10:12</p>
                 <div class="bachelor">
-                    <h3 class="no-underscore">B2 - Dolly&#39;s House: Light and Shadows in video games</h3>
+                    <h3 class="no-underscore">B2 - Dolly&#39;s House: Light and Shadows in Video Games</h3>
                      Prof. Dr. Tobias Lenz
                     
                     <a href="https://htw-imi-showtime.github.io/staging/ss25/bachelor/b2-licht_und_schatten/">-> Project_Details</a>
