--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: c8a7de9 
+</p><p>AbbreviatedHash: 6616b12 
 </p><p>AuthorDate: 2025-07-15 
-</p><p>AuthorEmail: 104438758&#43;juliusSchultz@users.noreply.github.com 
-</p><p>AuthorName: Julius Schultz 
+</p><p>AuthorEmail: 142119849&#43;P1exes@users.noreply.github.com 
+</p><p>AuthorName: P1exes 
 </p><p>CommitDate: 2025-07-15 
-</p><p>Hash: c8a7de9fbab921efc8da55e9977b41b43cd40bef 
-</p><p>Subject: M5 Wizards of Java: Update Pages (#456) 
+</p><p>Hash: 6616b121c67c30925bc63b71596072f44148972d 
+</p><p>Subject: B2 Second Release Train (#457) 
 </p>
 
 
