deploy: htw-imi-showtime/showtime-website@dfb07f3e0f7b723622f063d218120776c6aecee3

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -387,7 +387,7 @@ a project fair in the afternoon.</p>
             <li>
                 <p>10:47</p>
                 <div class="master">
-                    <h3 class="no-underscore">M2 - Genesis: Part I of A top-down god game using dynamically generated world maps</h3>
+                    <h3 class="no-underscore">M2 - Genesis: Part I of a top-down god game in which the world map is dynamically generated</h3>
                      Prof. Dr. Tobias Lenz
                     
                     <a href="https://htw-imi-showtime.github.io/staging/ss25/master/m2-genesis/">-> Project_Details</a>
@@ -429,7 +429,7 @@ a project fair in the afternoon.</p>
             <li>
                 <p>10:54</p>
                 <div class="master">
-                    <h3 class="no-underscore">M3 - Civitas: Part II of A top-down god game using dynamically generated world maps</h3>
+                    <h3 class="no-underscore">M3 - Civitas: Part II of a top-down god game in which a society is forming in a procedurally generated world</h3>
                      Prof. Dr. Tobias Lenz
                     
                     <a href="https://htw-imi-showtime.github.io/staging/ss25/master/m3-civitas/">-> Project_Details</a>
