--- a/ss25/master/m2-genesis/genesis-et-civitas/index.html
+++ b/ss25/master/m2-genesis/genesis-et-civitas/index.html
@@ -394,7 +394,7 @@ M2
             <h1>
                 <span class="type">M2 Master</span>
                 Genesis
-             <span class="subtitle master">Part I of A top-down god game using dynamically generated world maps</span>
+             <span class="subtitle master">Part I of a top-down god game in which the world map is dynamically generated</span>
              <span class="underscore-spacer"></span>
             </h1>
             <section style="text-align: right;">
