--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 6616b12 
+</p><p>AbbreviatedHash: dfb07f3 
 </p><p>AuthorDate: 2025-07-15 
-</p><p>AuthorEmail: 142119849&#43;P1exes@users.noreply.github.com 
-</p><p>AuthorName: P1exes 
+</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
+</p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2025-07-15 
-</p><p>Hash: 6616b121c67c30925bc63b71596072f44148972d 
-</p><p>Subject: B2 Second Release Train (#457) 
+</p><p>Hash: dfb07f3e0f7b723622f063d218120776c6aecee3 
+</p><p>Subject: m2-m3 added logos and updated both _index.md (#1) (#459) 
 </p>
 
 
