--- a/ss25/master/m3-civitas/genesis-et-civitas/index.html
+++ b/ss25/master/m3-civitas/genesis-et-civitas/index.html
@@ -394,7 +394,7 @@ M3
             <h1>
                 <span class="type">M3 Master</span>
                 Civitas
-             <span class="subtitle master">Part II of A top-down god game using dynamically generated world maps</span>
+             <span class="subtitle master">Part II of a top-down god game in which a society is forming in a procedurally generated world</span>
              <span class="underscore-spacer"></span>
             </h1>
             <section style="text-align: right;">
