deploy: htw-imi-showtime/showtime-website@438e83c4fb8f15ee4f2f30dd8bed7051b775ef30

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: dfb07f3 
-</p><p>AuthorDate: 2025-07-15 
+</p><p>AbbreviatedHash: 438e83c 
+</p><p>AuthorDate: 2025-07-16 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
-</p><p>CommitDate: 2025-07-15 
-</p><p>Hash: dfb07f3e0f7b723622f063d218120776c6aecee3 
-</p><p>Subject: m2-m3 added logos and updated both _index.md (#1) (#459) 
+</p><p>CommitDate: 2025-07-16 
+</p><p>Hash: 438e83c4fb8f15ee4f2f30dd8bed7051b775ef30 
+</p><p>Subject: fix url 
 </p>
 
 
