--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 438e83c 
-</p><p>AuthorDate: 2025-07-16 
-</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
-</p><p>AuthorName: Barne Kleinen 
-</p><p>CommitDate: 2025-07-16 
-</p><p>Hash: 438e83c4fb8f15ee4f2f30dd8bed7051b775ef30 
-</p><p>Subject: fix url 
+</p><p>AbbreviatedHash: fa7c304 
+</p><p>AuthorDate: 2025-07-17 
+</p><p>AuthorEmail: 142119849&#43;P1exes@users.noreply.github.com 
+</p><p>AuthorName: P1exes 
+</p><p>CommitDate: 2025-07-17 
+</p><p>Hash: fa7c3041a3f9607529cc0bd4dfbdb3cac2bde4fa 
+</p><p>Subject: B2 updated images (#462) 
 </p>
 
 
