deploy: htw-imi-showtime/showtime-website@0c7a653d4385665421366ce32f116eae4696cf5d

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: fa7c304 
+</p><p>AbbreviatedHash: 0c7a653 
 </p><p>AuthorDate: 2025-07-17 
-</p><p>AuthorEmail: 142119849&#43;P1exes@users.noreply.github.com 
-</p><p>AuthorName: P1exes 
+</p><p>AuthorEmail: 104438758&#43;juliusSchultz@users.noreply.github.com 
+</p><p>AuthorName: Julius Schultz 
 </p><p>CommitDate: 2025-07-17 
-</p><p>Hash: fa7c3041a3f9607529cc0bd4dfbdb3cac2bde4fa 
-</p><p>Subject: B2 updated images (#462) 
+</p><p>Hash: 0c7a653d4385665421366ce32f116eae4696cf5d 
+</p><p>Subject: M5 Wizards of Java: Text adjustments (#460) 
 </p>
 
 
