--- a/projects/index.html
+++ b/projects/index.html
@@ -344,7 +344,7 @@
                         </h3>
                     </a>
                     <p>
-                    Say goodbye to boring code tutorials – and hello to a magical world where Java meets potions, capes, and spellbinding design! Learning programming has never been this enchanting.
+                    Say goodbye to dry tutorials—our platform transforms learning Java into an exciting adventure filled with potions, artifacts, and digital sorcery. Through immersive storytelling and hands-on activities, complex coding concepts become intuitive and fun.
                     
                     </p>
                     <a href="/staging/ss25/master/m5-fun-with-programming/">-> Details</a>
