--- a/ss25/master/m5-fun-with-programming/features/index.html
+++ b/ss25/master/m5-fun-with-programming/features/index.html
@@ -474,7 +474,7 @@ M5&nbsp;&nbsp;</li>
     </h3>
     <div class="spacer"></div>
     <div class="content">
-        This e-learning unit is designed for first-semester international students of the Media Informatics Bachelor’s program at HTW Berlin. It teaches the fundamentals of Java programming in a creative and engaging way. Instead of traditional, dry exercises, students are guided through a magical storyline where programming concepts are explained using potions, magical capes, wands, and other fantasy elements. To ensure long-term usability, all learning content is managed via a connected headless CMS, allowing professors and students to adapt and expand the platform beyond the semester. Combined with a custom visual design theme, this e-learning unit offers a flexible, fun, and didactically meaningful approach to learning programming.
+        This e-learning unit is designed for English-speaking first-semester students enrolled in a media and computing program. It teaches the fundamentals of Java programming in a creative and engaging way. Instead of traditional, dry exercises, students are guided through a magical storyline where programming concepts are explained using potions, magical capes, wands, and other fantasy elements. To ensure long-term usability, all learning content is managed via a connected headless CMS, allowing professors and students to adapt and expand the platform beyond the semester. Combined with a custom visual design theme, this e-learning unit offers a flexible, fun, and didactically meaningful approach to learning programming.
     </div>
 </section>
 
@@ -532,7 +532,7 @@ M5&nbsp;&nbsp;</li>
 <section>
     <h3>
         
-            Ready to Make an Impact
+            Ready to make an impact
         
     </h3>
     <div class="spacer"></div>
