deploy: htw-imi-showtime/showtime-website@643e77882a1aa0f832901599af6d0fae15969b6e

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 0c7a653 
-</p><p>AuthorDate: 2025-07-17 
-</p><p>AuthorEmail: 104438758&#43;juliusSchultz@users.noreply.github.com 
-</p><p>AuthorName: Julius Schultz 
-</p><p>CommitDate: 2025-07-17 
-</p><p>Hash: 0c7a653d4385665421366ce32f116eae4696cf5d 
-</p><p>Subject: M5 Wizards of Java: Text adjustments (#460) 
+</p><p>AbbreviatedHash: 643e778 
+</p><p>AuthorDate: 2025-07-19 
+</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
+</p><p>AuthorName: Barne Kleinen 
+</p><p>CommitDate: 2025-07-19 
+</p><p>Hash: 643e77882a1aa0f832901599af6d0fae15969b6e 
+</p><p>Subject: update wf 
 </p>
 
 
