deploy: htw-imi-showtime/showtime-website@a55e6dbc76ecacb73840f895e0c224d48e043da4

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 643e778 
-</p><p>AuthorDate: 2025-07-19 
-</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
-</p><p>AuthorName: Barne Kleinen 
-</p><p>CommitDate: 2025-07-19 
-</p><p>Hash: 643e77882a1aa0f832901599af6d0fae15969b6e 
-</p><p>Subject: update wf 
+</p><p>AbbreviatedHash: a55e6db 
+</p><p>AuthorDate: 2025-07-20 
+</p><p>AuthorEmail: 149469185&#43;Elociraptor@users.noreply.github.com 
+</p><p>AuthorName: Elociraptor 
+</p><p>CommitDate: 2025-07-20 
+</p><p>Hash: a55e6dbc76ecacb73840f895e0c224d48e043da4 
+</p><p>Subject: B1 add logo (#463) 
 </p>
 
 
