deploy: htw-imi-showtime/showtime-website@10b08163bf625914f87a30b46b73229c4235b826

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: a55e6db 
+</p><p>AbbreviatedHash: 10b0816 
 </p><p>AuthorDate: 2025-07-20 
-</p><p>AuthorEmail: 149469185&#43;Elociraptor@users.noreply.github.com 
-</p><p>AuthorName: Elociraptor 
+</p><p>AuthorEmail: friedrichludwig12@gmail.com 
+</p><p>AuthorName: friedrich-ludwig 
 </p><p>CommitDate: 2025-07-20 
-</p><p>Hash: a55e6dbc76ecacb73840f895e0c224d48e043da4 
-</p><p>Subject: B1 add logo (#463) 
+</p><p>Hash: 10b08163bf625914f87a30b46b73229c4235b826 
+</p><p>Subject: B3 - update _Index.md (#464) 
 </p>
 
 
